--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: #2FF3E0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
